# XS

./: .gitignore  10-11.patch.sh  AUTHORS  CHANGES  COMPILERS  COPYING  EXAMPLES  GOTCHAS  INSTALL  MANIFEST  Makefile.am  Makefile.in  NOTES  README  README.md  RELOPS  SYSTEMD_LOCALE  TODO  TUTORIAL.md  access.c  access.cxx  build.sh  buildscan.sh  closure.cxx  config.h  configure.ac  conv.c  conv.cxx  dict.c  dict.cxx  dump.c  dump.cxx  es.1  es.h  es.hxx  esconfig.h  esconfig.hxx  eval.c  eval.cxx  examples.sh  (+96 more)
doc/: ANCESTORS  AUTHORS  CHANGES  COMPILERS  COPYING  PHILOSOPHY  PRIMITIVES  PROJECTS  SYSTEMD_LOCALE  TODO  TUTORIAL.md  XS-FOR-LISPERS  XS-FOR-LISPERS.md
examples/: README  SNAPSHOT_DATE  SUPPORT  _xsin  _xsrc
examples/_xslib.d/: X11.xs  attr.xs  cli.xs  data.xs  file.xs  instrumentation.xs  math.xs  miscellaneous.xs  process.xs  subs.xs  terminal.xs  utilities.xs  xs-builtins.xs
examples/_xsrc.d/: 2bwm.xs  aliases.xs  amusement.xs  apps.xs  bcc.xs  biases.xs  colors.xs  det.xs  directory.xs  docker.xs  file.xs  game.xs  gcal.xs  help.xs  histclean.xs  kasa.xs  kbmacro.xs  media.xs  pacer.xs  priv.xs  process.xs  prompt-config.xs  prompt.xs  system.xs  touchscreen.xs  unicode.xs  utilities.xs  virts.xs  web.xs  wm.xs  xs.xs
examples/_xsuser.d/: README  desktop.xs  env.xs  mame-games.xs  nixenv.xs  prompt-config.xs
examples/slider/: README  slider  slides
generators/: buildinfo.sh  git_date.sh  git_hash.sh  git_url.sh  initial.sh  mkparse.sh  mksignal.sh
man/: xs-new.1  xs.1
samples/: README  _xinitrc  _xsin  _xsprompt  _xsrc  announce  colors  dmr  histclean  lock  nsb  osd  slider  stq  sv  tsm  wcd  web-browser  wrc
samples/_config/herbstluftwm/: autostart  inits  load_panels  mopup  panel.xs  quitwm
samples/_config/sxhkd/: sxhkdrc
samples/_monitor/: common  monitor  osd  osd_pipe
samples/_monitor/monitors/: battery  disk  fan  swap  temperature
samples/_xslib.d/: attr.xs  subs.xs  util.xs
samples/_xsrc.d/: aliases.xs  amusement.xs  annotate.xs  backup.xs  bcc.xs  commands.xs  console.xs  daemons.xs  directory.xs  env.xs  evilwm.xs  file.xs  help.xs  herald.xs  herbstluftwm.xs  kasa.xs  libloc.xs  lilypond.xs  mame-games.xs  media.xs  music21.xs  pacer.xs  priv.xs  process.xs  prompt-config.xs  prompt.xs  system.xs  touchscreen.xs  unicode.xs  virts.xs  web.xs  wm.xs  xs.xs
samples/_xsuser.d/: prompt-config.xs
src/: access.cxx  buildinfo.cxx  closure.cxx  config.h  conv.cxx  dump.cxx  eval.cxx  fd.cxx  glob.cxx  glom.cxx  heredoc.cxx  initial.xs  input.cxx  main.cxx  match.cxx  opt.cxx  parse.yxx  prim-ctl.cxx  prim-etc.cxx  prim-io.cxx  prim-rel.cxx  prim-sys.cxx  prim.cxx  prim.hxx  proc.cxx  sigmsgs.hxx  signal.cxx  status.cxx  stdenv.hxx  str.cxx  syntax.cxx  syntax.hxx  term.cxx  term.hxx  token.cxx  tree.cxx  util.cxx  var.cxx  var.hxx  version.cxx  (+2 more)
tests/: .gitignore  all_tests.c  fuzz.sh  fuzz.xs  test_glob.c  test_print.c  test_suite_base.c  test_util.c  trip.xs  xs_tests.xs
tests/xs_tests/: arith.xs  char_escapes.xs  control.xs  eval.xs  extract.xs  funarg.xs  glob.xs  handler.xs  match.xs  optc.xs  parsing.xs  printf.xs  relop.xs  split.xs  subscript.xs  syntax_error.xs  truth.xs
tests/xs_tests/platform/x86_64/: printf.xs
testsuite/config/: unix.exp
testsuite/xs.all/: echo.exp  optc.exp  testrun.sum
xs-talk/: macro-example.xs  obj-example.xs  plz  prep.sh  xs-talk-abstract.txt  xs-talk.txt
xs_tests/: alias.xs  arith.xs  bind.xs  control.xs  echo.xs  functional.xs  glob.xs  optc.xs  parsing.xs  printf.xs  pushd.xs  redirect.xs  split.xs  switch.xs  syntax_error.xs
